# aiyoucli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
__tests__/: benchmark.test.ts  metrics-collector.test.ts  napi-intelligence.test.ts  napi-routing-analysis.test.ts  napi-vector.test.ts  q-table-persistence.test.ts  run-benchmarks.ts  semantic-router.test.ts
crates/aiyoucli-napi/: Cargo.toml
crates/aiyoucli-napi/src/: analysis.rs  attention.rs  detector.rs  distiller.rs  graph.rs  lib.rs  routing.rs  sona.rs  vector.rs
docs/: BENCHMARK-COMPARISON.md  COMPARISON.md  RUFLO-V3-VS-AIYOUCLI.md  architecture.md  cli-reference.md  configuration.md  getting-started.md  mcp-tools.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
scripts/: prepare-publish.js  version.js
src/: config.ts  index.ts  output.ts  parser.ts  suggest.ts  types.ts
src/commands/: index.ts
src/init/: agentsmd-generator.ts  interactive.ts  settings-generator.ts
src/mcp/: client.ts  server.ts  types.ts
src/mcp/tools/: agent-tools.ts  analyze-tools.ts  config-tools.ts  coordination-tools.ts  distiller-tools.ts  gcc-tools.ts  index.ts  (+12 more)
src/metrics/: benchmark.ts  builtin-benchmarks.ts  collector.ts
src/napi/: index.ts
src/production/: circuit-breaker.ts  error-handler.ts  index.ts  rate-limiter.ts  retry.ts
src/services/: worker-daemon.ts  worker-queue.ts
src/statusline/: generator.ts
