[package]
name = "aiyoucli-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "NAPI bindings for aiyoucli — bridges aiyouvector into Node.js"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi9", "async", "serde-json"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"

# aiyouvector crates — path during dev, switch to git/crates.io for CI
aiyouvector-core = { path = "../../../aiyouvector/crates/aiyouvector-core" }
aiyouvector-sona = { path = "../../../aiyouvector/crates/aiyouvector-sona" }
aiyouvector-attention = { path = "../../../aiyouvector/crates/aiyouvector-attention" }
aiyouvector-graph = { path = "../../../aiyouvector/crates/aiyouvector-graph" }
aiyouvector-profile = { path = "../../../aiyouvector/crates/aiyouvector-profile" }
aiyouvector-routing = { path = "../../../aiyouvector/crates/aiyouvector-routing" }
aiyouvector-embeddings = { path = "../../../aiyouvector/crates/aiyouvector-embeddings" }

[build-dependencies]
napi-build = "2"

